--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
 
 {% block head %}
 {{super()}}
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js
+></script>
 {% endblock %} 
 
 {% block body %}
