--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 {% endblock %} 
 
 {% block body %}
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="{{ url_for('dashboard') }}">Aurix</a>
