--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,6 @@
       </ul>
     </div>
   </nav>
+  <h1 class="display-4" style="text-align:center; color: #BF0000">Aurix Analytics: Direccion Nacional de Control de Drogas</h1>
   {% block content %}{% endblock %}
 {% endblock %}
