--- a/templates/query.html
+++ b/templates/query.html
@@ -13,7 +13,7 @@
 {% endif %}
 {% endwith %}
 
-<div class="container-fluid">
+<div class="table-responsive">
 <h1>Search</h1>
 <div class="row">
     <div class="col-md-4">
