--- a/templates/query.html
+++ b/templates/query.html
@@ -13,7 +13,7 @@
 {% endif %}
 {% endwith %}
 
-<div class="table-responsive">
+<div class="container-fluid">
 <h1>Search</h1>
 <div class="row">
     <div class="col-md-4">
@@ -21,7 +21,9 @@
     </div>
 </div>
 {% if condition %}
+     <div class="table-responsive"
     {{ condition|safe }}
+          </div>
 {% endif %}
 {% endblock %}
 </div>
