--- a/templates/query.html
+++ b/templates/query.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 {% if condition %}
-     <div class="table-responsive"
+     <div class="table-responsive">
     {{ condition|safe }}
           </div>
 {% endif %}
