--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,12 @@
 
 {% block body %}
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{{ url_for('dashboard') }}"><button type="button" class="btn btn-outline-danger">Aurix</button></a>
+        <a class="navbar-brand" href="{{ url_for('dashboard') }}">
+          <img src="{{url_for('static', filename='images/logo.png')}}" alt="" width="75" height="45" class="img-thumbnai">
+        </a>
       </div>
       <ul class="nav navbar-nav">
         <a href="{{ url_for('search') }}"><button type="button" class="btn btn-outline-secondary">Search</button></a>
