--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 {% block head %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js
-></script>
-<style>
-  body {
-    background-color: rgba(164,164,164, 0.3);
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}Aurix: DNCD{% endblock %}</title>
+  <link rel="icon" href="{{url_for('static', filename='images/favicon.png')}}" type="image/ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js>
+    </script>
+  <style>
+    body {
+      background-color: rgba(164,164,164, 0.3);
+    }
+  </style>
 {% endblock %} 
-
+</head>
+<body>
 {% block body %}
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<style>.bg-black{background-color: black ;}</style>
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="{{ url_for('dashboard') }}">
@@ -27,12 +35,12 @@
   <h3 class="h3" style="text-align:center; border-style: solid; color: #BF0000">Aurix Analytics: Direccion Nacional de Control de Drogas</h3>
   {% block content %}{% endblock %}
 {% endblock %}
+</body>
 
 {% block footer %}
 <footer class="fixed-bottom">
     <p class="text-center">Aurix: Intelligence & Analytics<br>&copy 2021</p>
 </footer>
-
 <style>
 footer {
     border-style: solid;
@@ -44,4 +52,5 @@ p {
     font-size: smaller;
   }
 </style>
+</html>
 {% endblock %}
