--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 </body>
 
 {% block footer %}
-<footer class="fixed-bottom">
+<footer class="sticky-bottom">
     <p class="text-center">Aurix: Intelligence & Analytics<br>&copy 2021</p>
 </footer>
 <style>
