--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,13 @@
   <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js>
     </script>
   <style>
-    html, body {
+    body {
       height: 100%;
       background-color: rgba(164,164,164, 0.3);
     }
   </style>
 {% endblock %} 
 </head>
-<div class="container-fluid" style="height: 100vh">
 <body>
 {% block body %}
 <style>.bg-black{background-color: black ;}</style>
@@ -37,8 +36,6 @@
   <h3 class="h3" style="text-align:center; border-style: solid; color: #BF0000">Aurix Analytics: Direccion Nacional de Control de Drogas</h3>
   {% block content %}{% endblock %}
 {% endblock %}
-</body>
-
 {% block footer %}
 <footer class="sticky-bottom">
     <p class="text-center">Aurix: Intelligence & Analytics<br>&copy 2021</p>
@@ -54,6 +51,7 @@ p {
     font-size: smaller;
   }
 </style>
-</html>
 {% endblock %}
- </div>
+</body>
+</html>
+
