--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     </script>
   <style>
     body {
-      height: 100%;
+      height: 100vh;
       background-color: rgba(164,164,164, 0.3);
     }
   </style>
