--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,8 @@
   <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js>
     </script>
   <style>
-    body {
-      height: 100vh;
-      background-color: rgba(164,164,164, 0.3);
-    }
+    html{height: 100%}
+    body {background-color: rgba(164,164,164, 0.3)}
   </style>
 {% endblock %} 
 </head>
