--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,18 @@
   <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js>
     </script>
   <style>
-    html{height: 100%}
-    body {background-color: rgba(164,164,164, 0.3)}
+    html, body {
+      background-color: rgba(164,164,164, 0.3);
+      height: 100%
+    }
+    .app {
+      height: 100%;
+    }
   </style>
 {% endblock %} 
 </head>
 <body>
+  <div class="app">
 {% block body %}
 <style>.bg-black{background-color: black ;}</style>
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
@@ -50,6 +56,7 @@ p {
   }
 </style>
 {% endblock %}
+  </div>
 </body>
 </html>
 
