--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js>
     </script>
   <style>
-    html, body {
+    body {
       background-color: rgba(164,164,164, 0.3);
       height: 100%
     }
