table responsiveness, fluid name search

--- a/templates/query.html
+++ b/templates/query.html
@@ -27,5 +27,13 @@
     {{ condition|safe }}
           </div>
 {% endif %}
+<style>
+tbody, thead{
+  max-height:500px;
+  overflow:scroll;
+  display:block;
+}
+</style>
+
 {% endblock %}
 </div>
