--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,18 +2,20 @@
 
 {% block content %}
 <div id="dashboardCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <h2 style="text-align: center;"><u>{{ legend1 }}</u></h2>
-      <canvas id="{{ legend1 }}" width="" height=""></canvas>
-    </div>
-    <div class="carousel-item" data-bs-interval="10000">
-      <h2 style="text-align: center;"><u>{{ legend2 }}</u></h2>
-      <canvas id="{{ legend2 }}" width="" height=""></canvas>
-    </div>
-    <div class="carousel-item" data-bs-interval="10000">
-      <h2 style="text-align: center;"><u>{{ legend3 }}</u></h2>
-      <canvas id="{{ legend3 }}" width="" height=""></canvas>
+  <div class="container-xl">    
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <h2 style="text-align: center;"><u>{{ legend1 }}</u></h2>
+        <canvas id="{{ legend1 }}" width="" height=""></canvas>
+      </div>
+      <div class="carousel-item" data-bs-interval="10000">
+        <h2 style="text-align: center;"><u>{{ legend2 }}</u></h2>
+        <canvas id="{{ legend2 }}" width="" height=""></canvas>
+      </div>
+      <div class="carousel-item" data-bs-interval="10000">
+        <h2 style="text-align: center;"><u>{{ legend3 }}</u></h2>
+        <canvas id="{{ legend3 }}" width="" height=""></canvas>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#dashboardCarousel" role="button" data-bs-slide="prev">
