--- a/templates/query.html
+++ b/templates/query.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
 
@@ -16,7 +17,7 @@
 
 <div class="container-fluid">
 <h1>Search</h1>
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form action="" method="post" class="form" role="form">
             {{ form.csrf_token() }}
         <div class="row">
