Search fix and footer bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,9 +37,11 @@
   {% block content %}{% endblock %}
 {% endblock %}
 {% block footer %}
+<div>
 <footer class="sticky-bottom">
     <p class="text-center">Aurix: Intelligence & Analytics<br>&copy 2021</p>
 </footer>
+</div>
 <style>
 footer {
     border-style: solid;
