--- a/templates/base.html
+++ b/templates/base.html
@@ -5,54 +5,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Aurix: DNCD{% endblock %}</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="icon" href="{{url_for('static', filename='images/favicon.png')}}" type="image/ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js>
-    </script>
-  <style>
-    body {
-      background-color: rgba(164,164,164, 0.3);
-      height: 100%
-    }
-  </style>
+  <script src=https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js></script>
 {% endblock %} 
 </head>
 <body>
 {% block body %}
-<style>.bg-black{background-color: black ;}</style>
-<nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="{{ url_for('dashboard') }}">
-          <img src="{{url_for('static', filename='images/logo.png')}}" alt="" width="75" height="45" class="img-thumbnai">
-        </a>
-      </div>
-      <ul class="nav navbar-nav">
-        <a href="{{ url_for('search') }}"><button type="button" class="btn btn-outline-secondary">Search</button></a>
-      </ul>
-    </div>
-  </nav>
-  <h3 class="h3" style="text-align:center; border-style: solid; color: #BF0000">Aurix Analytics: Direccion Nacional de Control de Drogas</h3>
-  {% block content %}{% endblock %}
+  <style>.bg-black{background-color: black ;}</style>
+  <main>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('dashboard') }}">
+              <img src="{{url_for('static', filename='images/logo.png')}}" alt="" width="75" height="45" class="img-thumbnai">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: end;">
+                <li><a href="{{ url_for('flight') }}"><button type="button" class="btn btn-outline-danger mb-2">DUMP1090</button></a></li>
+                <li><a href="{{ url_for('search') }}"><button type="button" class="btn btn-outline-danger">Search</button></a></li>
+              </ul>
+            </div>
+          </div>   
+      </nav>
+      <h3 class="h3" style="text-align:center; border-style: solid; color: #BF0000">Aurix Analytics: Direccion Nacional de Control de Drogas</h3>
+      {% block content %}{% endblock %}
+  </main>
 {% endblock %}
 {% block footer %}
-<div>
-<footer class="sticky-bottom">
-    <p class="text-center">Aurix: Intelligence & Analytics<br>&copy 2021</p>
-</footer>
-</div>
-<style>
-footer {
-    border-style: solid;
-    height: 50px;
-    background-color: #999;
-  }
-p {
-    color: #BF0000;
-    font-size: smaller;
-  }
-</style>
+  <footer class="sticky-bottom">
+      <p class="text-center footer-text">Aurix: Intelligence & Analytics<br>&copy 2021</p>
+  </footer>
 {% endblock %}
 </body>
 </html>
