--- a/templates/query.html
+++ b/templates/query.html
@@ -15,31 +15,32 @@
 {% endif %}
 {% endwith %}
 
-<div class="container-fluid">
-<h1>Search</h1>
+<section class="container-fluid">
+<h3><strong>Search</strong></h3>
     <div class="col-md-12">
         <form action="" method="post" class="form" role="form">
             {{ form.csrf_token() }}
         <div class="row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-5">
               {{ wtf.form_field(form.nombre, class='form-control', 
                  placeholder='Nombre') }}
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-5">
               {{ wtf.form_field(form.noid, class='form-control', 
                  placeholder='Cedula o Pasaporte') }}
+            </div>            
+            <div class="form-group col-md-2 mt-4">            
+                <button type="submit" class="btn btn-danger">Submit</button>
             </div>
         </div>
-        
-        <br>
-            <center><button type="submit" class="btn btn-danger">Submit</button></center>
         </form>
-    </div>
+    </div>    
+    </section>
     <br>
 {% if condition %}
-     <div class="table-responsive" style="overflow-y: scroll; height: 70vh;">
+     <section class="table-responsive" style="overflow-y: scroll; height: 70vh;">
     {{ condition|safe }}
-    </div>
+    </section>
 {% endif %}
 </div>
 {% endblock %}
