--- a/templates/flight.html
+++ b/templates/flight.html
@@ -21,9 +21,9 @@
     </div>    
     </section>
     <br>
-{% if condition %}
+{% if rid %}
      <section class="table-responsive" style="overflow-y: scroll; height: 70vh;">
-    {{ condition|safe }}
+    {{ rid|safe }}
     </section>
 {% endif %}
 </div>
