--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             </div>
           </div>   
       </nav>
-      <h3 class="h3" style="text-align:center; border-style: solid; color: #BF0000">Aurix Analytics: Direccion Nacional de Control de Drogas</h3>
+      <h3 class="h3" style="text-align:center; border-style: solid; color: #BF0000">Aurix Intelligence Portal</h3>
       {% block content %}{% endblock %}
   </main>
 {% endblock %}
