--- a/templates/query.html
+++ b/templates/query.html
@@ -21,25 +21,25 @@
         <form action="" method="post" class="form" role="form">
             {{ form.csrf_token() }}
         <div class="row">
-            <div class="form-group col-md-8">
+            <div class="form-group col-8">
               {{ wtf.form_field(form.noid, class='form-control', 
                  placeholder='Cedula o Pasaporte') }}
             </div>            
-            <div class="form-group col-md-4">
+            <div class="form-group col-4">
               {{ wtf.form_field(form.fecha1, class='form-control', 
                  placeholder='Hasta') }}
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-md-8">
+            <div class="form-group col-8">
                 {{ wtf.form_field(form.nombre, class='form-control', 
                    placeholder='Nombre') }}
               </div>              
-            <div class="form-group col-md-4">
+            <div class="form-group col-4">
               {{ wtf.form_field(form.fecha2, class='form-control', 
                  placeholder='Desde') }}
             </div>
-            <div class="form-group col-md-2 mt-4">            
+            <div class="form-group col-2 mt-4">            
                 <button type="submit" class="btn btn-danger">Submit</button>
             </div>
         </div>
