--- a/templates/flight.html
+++ b/templates/flight.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="form-group col-md-10">
                 {{ wtf.form_field(form.id, class='form-control', 
-                   placeholder='Aircraft ID') }}        
+                   placeholder='ICAO') }}        
             </div>
             <div class="form-group col-md-2">            
                 <button type="submit" class="btn btn-danger mt-4">Submit</button>
