--- a/templates/query.html
+++ b/templates/query.html
@@ -39,9 +39,9 @@
               {{ wtf.form_field(form.fecha2, class='form-control', 
                  placeholder='Desde') }}
             </div>
-            <div class="form-group col-2 mt-4">            
-                <button type="submit" class="btn btn-danger">Submit</button>
-            </div>
+        </div>
+        <div class="form-group mt-4">            
+            <center><button type="submit" class="btn btn-danger">Submit</button></center>
         </div>
         </form>
     </div>    
